comments and optimization

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -61,15 +61,15 @@
      <Compile Include="Assets\Scripts\AI Support\Sensing.cs" />
      <Compile Include="Assets\Scripts\AI.cs" />
      <Compile Include="Assets\Scripts\Behaviours.cs" />
-     <Compile Include="Assets\Scripts\BT\BehaviourTree.cs" />
-     <Compile Include="Assets\Scripts\BT\BlackBoard.cs" />
-     <Compile Include="Assets\Scripts\BT\Nodes\ActionNode.cs" />
-     <Compile Include="Assets\Scripts\BT\Nodes\ConditionNode.cs" />
-     <Compile Include="Assets\Scripts\BT\Nodes\Node.cs" />
-     <Compile Include="Assets\Scripts\BT\Nodes\ParallelNode.cs" />
-     <Compile Include="Assets\Scripts\BT\Nodes\RandomNode.cs" />
-     <Compile Include="Assets\Scripts\BT\Nodes\SelectorNode.cs" />
-     <Compile Include="Assets\Scripts\BT\Nodes\SequenceNode.cs" />
+     <Compile Include="Assets\Scripts\BehaviourTree\BehaviourTree.cs" />
+     <Compile Include="Assets\Scripts\BehaviourTree\BlackBoard.cs" />
+     <Compile Include="Assets\Scripts\BehaviourTree\Nodes\ActionNode.cs" />
+     <Compile Include="Assets\Scripts\BehaviourTree\Nodes\ConditionNode.cs" />
+     <Compile Include="Assets\Scripts\BehaviourTree\Nodes\Node.cs" />
+     <Compile Include="Assets\Scripts\BehaviourTree\Nodes\ParallelNode.cs" />
+     <Compile Include="Assets\Scripts\BehaviourTree\Nodes\RandomNode.cs" />
+     <Compile Include="Assets\Scripts\BehaviourTree\Nodes\SelectorNode.cs" />
+     <Compile Include="Assets\Scripts\BehaviourTree\Nodes\SequenceNode.cs" />
      <Compile Include="Assets\Scripts\Constants.cs" />
      <Compile Include="Assets\Scripts\GamePlaySupport\AiAgentSpawner.cs" />
      <Compile Include="Assets\Scripts\GamePlaySupport\Collectable.cs" />
